--- a/wishlist.html
+++ b/wishlist.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zepto Books App | Best Books Listing Website</title>
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="wishlist.css" />
   </head>
   <body>
     <!-- Navbar Starts -->
@@ -16,6 +15,5 @@
         <a href="./wishlist.html" id="wishlist-link">Wishlist</a>
       </div>
     </nav>
-    <!-- Navbar Ends -->
   </body>
 </html>
