Added book details page development

--- a/book-details.html
+++ b/book-details.html
@@ -6,7 +6,7 @@
     <title>Zepto Books App | Best Books Listing Website</title>
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="book-details.css" />
   </head>
   <body>
     <!-- Navbar Starts -->
@@ -19,11 +19,12 @@
     </nav>
     <!-- Navbar Ends -->
 
-    <!-- Books List Starts -->
-    <div id="books-list"></div>
-    <!-- Books List Ends -->
+    <!-- Book Details Starts -->
+    <div id="book-details"></div>
 
-    <!-- Main JS -->
-    <script src="./main.js"></script>
+    <!-- Book Detail Ends -->
+
+    <!-- Book Details JS -->
+    <script src="./book-details.js"></script>
   </body>
 </html>
