Added pagination and wishlist screen ui development

--- a/book-details.html
+++ b/book-details.html
@@ -19,6 +19,14 @@
     </nav>
     <!-- Navbar Ends -->
 
+    <div class="loading-wrapper">
+      <img id="loading-text" style="display: none" src="./assets/loading.gif" />
+    </div>
+
+    <a id="back-to-home" href="./index.html" style="display: none"
+      >< Back To Home</a
+    >
+
     <!-- Book Details Starts -->
     <div id="book-details"></div>
 
