--- a/wishlist.html
+++ b/wishlist.html
@@ -15,5 +15,11 @@
         <a href="./wishlist.html" id="wishlist-link">Wishlist</a>
       </div>
     </nav>
+    <!-- Navbar Ends -->
+    <!-- Wishlist Starts -->
+    <div id="wishlist-container"></div>
+    <!-- Wishlist Ends -->
+
+    <script type="module" src="./wishlist.js"></script>
   </body>
 </html>
