Added search and filter functionality on homepage UI

--- a/book-details.html
+++ b/book-details.html
@@ -23,9 +23,7 @@
       <img id="loading-text" style="display: none" src="./assets/loading.gif" />
     </div>
 
-    <a id="back-to-home" href="./index.html" style="display: none"
-      >< Back To Home</a
-    >
+    <a id="back-navigation" style="display: none; cursor: pointer">< Back</a>
 
     <!-- Book Details Starts -->
     <div id="book-details"></div>
