Implemented Animation on books list

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <!-- ASOS Animatino CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navbar Starts -->
@@ -51,5 +53,10 @@
 
     <!-- Main JS -->
     <script src="./main.js"></script>
+    <!-- ASOS Animation JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
