Refactored folder structure of project

--- a/book-details.html
+++ b/book-details.html
@@ -6,7 +6,7 @@
     <title>Zepto Books App | Best Books Listing Website</title>
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="book-details.css" />
+    <link rel="stylesheet" href="./css/book-details.css" />
   </head>
   <body>
     <!-- Navbar Starts -->
@@ -31,6 +31,6 @@
     <!-- Book Detail Ends -->
 
     <!-- Book Details JS -->
-    <script src="./book-details.js"></script>
+    <script src="./js/book-details.js"></script>
   </body>
 </html>
