--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Zepto Books App | Best Books Listing Website</title>
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- ASOS Animatino CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -52,11 +52,11 @@
     <!-- Pagination Ends -->
 
     <!-- Main JS -->
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
     <!-- ASOS Animation JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
+    <!-- <script>
       AOS.init();
-    </script>
+    </script> -->
   </body>
 </html>
