--- a/wishlist.html
+++ b/wishlist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zepto Books App | Best Books Listing Website</title>
-    <link rel="stylesheet" href="wishlist.css" />
+    <link rel="stylesheet" href="./css/wishlist.css" />
   </head>
   <body>
     <!-- Navbar Starts -->
@@ -20,6 +20,6 @@
     <div id="wishlist-container"></div>
     <!-- Wishlist Ends -->
 
-    <script type="module" src="./wishlist.js"></script>
+    <script type="module" src="./js/wishlist.js"></script>
   </body>
 </html>
