--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <script src="./js/main.js"></script>
     <!-- ASOS Animation JS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!-- <script>
+    <script>
       AOS.init();
-    </script> -->
+    </script>
   </body>
 </html>
